<resources>
    <string name="app_name">EpiRSS</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Title">Title</string>
    <string name="Comment">Comment</string>
    <string name="Url">Url</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="validate">VALIDATE</string>
    <string name="register">REGISTER</string>
    <string name="add_feed">ADD FEED</string>
    <string name="mock">MOCK</string>
    <string name="logout">Logout</string>
</resources>
