<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_gravity="bottom|end">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:visibility="invisible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_feed"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#f0f7f4"
                            android:layout_width="match_parent"
                            android:theme="@style/TextLabel"
                            android:layout_height="wrap_content">

                            <EditText
                                android:textSize="16sp"
                                android:hint="@string/Title"
                                android:textColor="#f0f7f4"
                                android:id="@+id/et_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:textSize="16sp"
                                android:hint="@string/Url"
                                android:textColor="#f0f7f4"
                                android:id="@+id/et_url"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textUri"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:textSize="16sp"
                                android:textColor="#f0f7f4"
                                android:hint="@string/Comment"
                                android:id="@+id/et_comment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btn_go"
                        android:background="@drawable/bt_shape_2"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:text="@string/validate"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        android:layout_gravity="end|bottom"
        app:useCompatPadding="true"/>

</FrameLayout>